--- a/css/index.css
+++ b/css/index.css
@@ -15,20 +15,18 @@
     font-family: "NY";
     src: url('../fonts/NewYork/NewYork.ttf')
 }
+.bg {
+    background-color: #0a0a0c;
+}
 nav {
     background-color: #1d1d1f;
 }
 html {
     position: relative;
     min-height: 100%;
-    background-color: black;
 }
 body {
     margin-bottom: 60px;
-    background-color: black;
-}
-main {
-    background-color: black;
 }
 .footer {
     position: absolute;
@@ -59,9 +57,8 @@ a.footer-link:hover {
     text-decoration: underline;
 }
 img.main {
-    margin-left:60px;
-    margin-top: 60px;
-    margin-bottom: 120px;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 img.picon {
     margin-left:25px;
@@ -69,14 +66,37 @@ img.picon {
 .top-li-in-ul {
     padding-top: 10px;
 }
-h1, h2, h3, h4 {
+h1 {
     font-family: "SFPro";
-    color: #F9F6EF
+    color: #F9F6EF;
+    font-size:200%;
+}
+h2 {
+    font-family: "SFPro";
+    color: #F9F6EF;
+}
+h3 {
+    font-family: "SFPro";
+    color: #F9F6EF;
+}
+h4 {
+    font-family: "SFPro";
+    color: #F9F6EF;
 }
 span, p {
     font-family: "SFPro";
-    color: #F9F6EF
+    color: #F9F6EF;
 }
 li.main { 
-    color: #F9F6EF; }
-  
+    color: #F9F6EF; 
+}
+.float-container {
+    margin-top: 50px;
+    padding: 50px;
+}
+
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+}  
