--- a/css/_index.css
+++ b/css/_index.css
@@ -19,20 +19,39 @@
     src: url('../fonts/NewYork/NewYork.ttf')
 }
 .bg {
-    background-color: #1d1d1f;
+    background-color: #0a0a0c;
     padding: 10px;
 }
 nav {
     background-color: #1d1d1f;
 }
-div {
-    max-width: 600px;
-}
 html {
     position: relative;
     min-height: 100%;
 }
+body {
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px; 
+    background-color: #1d1d1f;
+}
+/*
+body > .container {
+    padding: 0px;
+}
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}  */
 
+.container {
+    width: 50%;
+}
 code {
     font-size: 80%;
     font-family: "SFMono";
@@ -76,7 +95,22 @@ span, p {
     font-family: "SFPro";
     color: #F9F6EF;
 }
+li.main { 
+    color: #F9F6EF; 
+}
+.float-container {
+    margin-top: 50px;
+    padding: 50px;
+}
 
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+}  
+td {
+    padding: 10px;
+}
 
 .web {
     background-color: #1DA1F2;
